# lightweight-analytics-duckdb-smallpond-oct2025

./: README.md  pyproject.toml  requirements.txt
workshop/: Practice.ipynb  Smallpond.ipynb  docker-compose.yml
workshop/Ray/: Dockerfile  requirements.txt
workshop/notebooks/: Introduction.ipynb  Practice_in_collab.ipynb  Smallpond.ipynb  Smallpond_in_Collab.ipynb  sample.parquet
