[project]
name = "smallpond-102025"
version = "0.1.0"
description = "Smallpond workshop"
readme = "README.md"
requires-python = "==3.11.11"
dependencies = [
    "jupyter>=1.1.1",
    "minio>=7.2.18",
    "pandas>=2.3.3",
    "pyarrow>=16.1.0",
    "ray==2.35.0",
    "smallpond>=0.15.0",
]

[tool.uv]
dev-dependencies = [
    "pre-commit>=3.5.0",
]
